# forecast_anything

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: Product Document.docx  mertrics.md  project_vision.md  tips_and_best_practices.md  ~$oduct Document.docx
notebooks/: use_case.ipynb
src/: config.py
src/data/: etl.py  schema.py
src/helper/: metrics.py  utils.py
src/models/: arima.py  baseline.py  eda.py  exponential_smoothing.py  feature_engineering.py  lightgbm.py  llm_features.py  model_inference.py  model_run.py  neuralforecast.py  pipeline.py
