[project]
name = "forecast-anything"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "skforecast>=0.19.0",
    "statsforecast>=2.0.3",
    "statsmodels>=0.14.5",
    "torch>=2.9.1",
    "tsfresh>=0.21.1",
]
